# TP2

./: CMakeLists.txt
include/: color.h  sinoscope.h
source/: color.c  main.c  sinoscope-opencl.c  sinoscope-openmp.c  sinoscope.c
source/kernel/: sinoscope.cl
